--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node .",
     "start:dev": "nodemon ."
   },
@@ -13,9 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "express-async-errors": "^3.1.1"
+    "express-async-errors": "^3.1.1",
+    "socket.io": "^4.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "jest": "^27.2.0",
+    "nodemon": "^2.0.12",
+    "socket.io-client": "^4.2.0"
   }
 }
