--- a/backend/package.json
+++ b/backend/package.json
@@ -18,8 +18,12 @@
     "socket.io": "^4.2.0"
   },
   "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.2.0",
     "nodemon": "^2.0.12",
+    "prettier": "2.4.1",
     "socket.io-client": "^4.2.0"
   }
 }
