--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,21 +18,21 @@ services:
     volumes:
       - ./backend:/app/
 
-  # frontend:
-  #   build:
-  #     context: ./frontend
-  #     dockerfile: Dockerfile.dev
-  #   image: ${DOCKER_USERNAME}/live-chat-frontend
-  #   depends_on:
-  #     - backend
-  #   environment:
-  #     - REACT_APP_BACKEND_HOST
-  #   ports:
-  #     - 3000:3000
-  #   networks:
-  #     - the-network
-  #   volumes:
-  #     - ./frontend:/app/
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    image: ${DOCKER_USERNAME}/live-chat-frontend
+    depends_on:
+      - backend
+    environment:
+      - REACT_APP_BACKEND_HOST
+    ports:
+      - 3000:3000
+    networks:
+      - the-network
+    volumes:
+      - ./frontend:/app/
 
 networks:
   the-network:
