--- a/backend/package.json
+++ b/backend/package.json
@@ -17,7 +17,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "socket.io": "^4.2.0"
+    "socket.io": "^4.2.0",
+    "uuidv4": "^6.2.12"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
